[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Other/starDiamond.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Xolonium-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Point/Point.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/particle.wav" type="AudioStream" id=4]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.317935, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.784314, 1, 1, 1, 0 )

[sub_resource type="DynamicFont" id=3]
size = 24
outline_size = 4
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PointLabelPos:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PointLabelPos:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "display_point"
tracks/0/type = "value"
tracks/0/path = NodePath("PointLabelPos:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PointLabelPos:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -35 ) ]
}

[node name="Point" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Stars" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
one_shot = true
explosiveness = 0.5
texture = ExtResource( 1 )
emission_shape = 2
emission_rect_extents = Vector2( 35, 1 )
direction = Vector2( 0, 1 )
spread = 30.0
gravity = Vector2( 0, -2000 )
initial_velocity = 200.0
linear_accel = 100.0
angle = 90.0
angle_random = 1.0
scale_amount_random = 1.0
color_ramp = SubResource( 2 )

[node name="PointLabelPos" type="Position2D" parent="."]
modulate = Color( 1, 1, 1, 0 )

[node name="PointLabel" type="Label" parent="PointLabelPos"]
margin_left = -33.0
margin_top = -20.0
margin_right = 39.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "100"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/display_point = SubResource( 5 )

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
